--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.6
+  provider: ^6.0.0
 
 dev_dependencies:
   flutter_test:
@@ -27,7 +28,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - lib/assets/global/
+    - assets/
 
 
   # fonts:
